menu linked to other sites how help, legal notice and privace policy

--- a/summary.html
+++ b/summary.html
@@ -187,9 +187,9 @@
             <div class="nav-profile-container" id="profile-menu">
               <div class="nav-profile-link-container">
                 <ul class="nav-profile-links">
-                  <li class="nav-profile-link-item"><a href="">Help</a></li>
-                  <li class="nav-profile-link-item"><a href="">Legal Notice</a></li>
-                  <li class="nav-profile-link-item"><a href="">Privacy Policy</a></li>
+                  <li class="nav-profile-link-item"><a href="./help.html">Help</a></li>
+                  <li class="nav-profile-link-item"><a href="./legal_notice.html">Legal Notice</a></li>
+                  <li class="nav-profile-link-item"><a href="./privacy_police.html">Privacy Policy</a></li>
                   <li class="nav-profile-link-item"><a href="">Log out</a></li>
                 </ul>
               </div>
