--- a/contacts.html
+++ b/contacts.html
@@ -151,8 +151,10 @@
                     <div class="contact-rightside-big-container">
                         <div class="contacts-header">
                             <h2>Contacts</h2>
-                            <div class="contacts-header-seperator"></div>
-                            <p class="contacts-header-txt">Better with a Team</p>
+                            <div class="contact-header-second-container">
+                                <div class="contacts-header-seperator"></div>
+                                <p class="contacts-header-txt">Better with a Team</p>
+                            </div>
                         </div>
                         <section id="contact_template" class="contact-template">
                         </section>
