--- a/contacts.html
+++ b/contacts.html
@@ -11,8 +11,8 @@
 
 <body onload="filterContacts()">
     <section class="layout">
-        <section id="overlay" class="overlay d_none" onclick="closeOverlay()">
-            <div id="overlay_content" class="overlay-shadow-pos-rel-container">
+        <section id="overlay_contacts" class="overlay d_none" onclick="closeOverlay()">
+            <div id="overlay_contacts_content" class="overlay-shadow-pos-rel-container">
 
             </div>
         </section>
