Refactor add task logic and integrate Firebase
Refactored subtask input and editing logic for better modularity and maintainability. Added add_task_firebase.js to handle loading and posting tasks to Firebase, and integrated it into add_task.html. Improved event handling and code structure in add_task.js, and moved subtask HTML template to add_task_template.js. Minor HTML fixes and script inclusions in add_task.html and board.html.

--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@
     <script src="./script/obj.js"></script>
     <script src="./script/template.js"></script>
     <script src="./script/add_task.js"></script>
+    <script src="./script/add_task_template.js"></script>
 </head>
 
 <body onload="init()">
