Add 'novalidate' attribute to add task form
The 'novalidate' attribute was added to the form in add_task.html to disable native browser validation, allowing for custom validation handling.

--- a/add_task.html
+++ b/add_task.html
@@ -193,7 +193,7 @@
         </header>
         <section class="ad">
           <h2>Add Task</h2>
-          <form action="">
+          <form action="" novalidate>
             <div class="form_wrapper">
               <div class="input_container w100">
                 <!-- Title -->
