--- a/legal_notice.html
+++ b/legal_notice.html
@@ -184,7 +184,7 @@
           </div>
         </header>
         <section>
-          <h2>Legal Notice</h2>
+          <h2>Legal notice</h2>
 
           <div class="instructions">
             <h3 class="mb16">Imprint</h3>
