--- a/board.html
+++ b/board.html
@@ -151,61 +151,78 @@
                             </button>
                         </div>
                     </section>
-                    <section class="task-assignment">
-                        <section>
+                </header>
+                <section class="kanban-board">
+                    <section class="column">
+
+                        <header>
                             <h4>To do</h4>
                             <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
                                 <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2" />
                                 <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round" />
                                 <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round" />
                             </svg>
+                        </header>
+                        <section class="task-list" id="to-do-kanban" ondrop="moveTo('to_do', 'to-do-kanban')"
+                            ondragenter="highlight('to-do-kanban')" ondragleave="removeHighlight('to-do-kanban')"
+                            ondragover="allowDrop(event)">
                         </section>
-                        <section>
+
+                    </section>
+
+                    <section class="column">
+
+                        <header>
                             <h4>In progress</h4>
                             <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
                                 <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2" />
                                 <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round" />
                                 <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round" />
                             </svg>
+                        </header>
+                        <section class="task-list" id="in-progress-kanban"
+                            ondrop="moveTo('in_progress', 'in-progress-kanban')"
+                            ondragenter="highlight('in-progress-kanban')"
+                            ondragleave="removeHighlight('in-progress-kanban')" ondragover="allowDrop(event)">
                         </section>
-                        <section>
+
+                    </section>
+
+                    <section class="column">
+
+                        <header>
                             <h4>Await feedback</h4>
                             <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
                                 <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2" />
                                 <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round" />
                                 <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round" />
                             </svg>
+                        </header>
+                        <section class="task-list" id="await-feedback-kanban"
+                            ondrop="moveTo('await_feedback', 'await-feedback-kanban')"
+                            ondragenter="highlight('await-feedback-kanban')"
+                            ondragleave="removeHighlight('await-feedback-kanban')" ondragover="allowDrop(event)">
                         </section>
-                        <section>
+
+                    </section>
+
+                    <section class="column">
+
+                        <header>
                             <h4>Done</h4>
                             <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
                                 <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2" />
                                 <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round" />
                                 <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round" />
                             </svg>
+                        </header>
+                        <section class="task-list" id="done-kanban" ondrop="moveTo('done', 'done-kanban')"
+                            ondragenter="highlight('done-kanban')" ondragleave="removeHighlight('done-kanban')"
+                            ondragover="allowDrop(event)">
                         </section>
+
                     </section>
-                </header>
-                <section class="kanban-board">
-                    <!-- Über DIV oder JS Template ifbody < 900px innerhtml = HtmlTemp -->
-                    <section class="task-list" id="to-do-kanban" ondrop="moveTo('to_do', 'to-do-kanban')"
-                        ondragenter="highlight('to-do-kanban')" ondragleave="removeHighlight('to-do-kanban')"
-                        ondragover="allowDrop(event)">
-                    </section>
-                    <section class="task-list" id="in-progress-kanban"
-                        ondrop="moveTo('in_progress', 'in-progress-kanban')"
-                        ondragenter="highlight('in-progress-kanban')"
-                        ondragleave="removeHighlight('in-progress-kanban')" ondragover="allowDrop(event)">
-                    </section>
-                    <section class="task-list" id="await-feedback-kanban"
-                        ondrop="moveTo('await_feedback', 'await-feedback-kanban')"
-                        ondragenter="highlight('await-feedback-kanban')"
-                        ondragleave="removeHighlight('await-feedback-kanban')" ondragover="allowDrop(event)">
-                    </section>
-                    <section class="task-list" id="done-kanban" ondrop="moveTo('done', 'done-kanban')"
-                        ondragenter="highlight('done-kanban')" ondragleave="removeHighlight('done-kanban')"
-                        ondragover="allowDrop(event)">
-                    </section>
+
                 </section>
             </section>
         </main>
