responsive design for summaryBranch. (not final)

--- a/summary.html
+++ b/summary.html
@@ -103,6 +103,7 @@
     <section class="main">
       <header class="main-header">
         <div class="content-limit-header">
+          <div class="mobile-header-logo">Logo Platzhalter</div>
           <div class="header-text">Kanban Project Management Tool</div>
           <div class="header-profil">
             <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
