responsive animation for the greeting before panel

--- a/summary.html
+++ b/summary.html
@@ -218,6 +218,7 @@
 
   </section>
   <script src="./script/summary.js"></script>
+  <script src="./script/summary_animation.js"></script>
 </body>
 
 </html>
