Change Task overlay Designed

--- a/board.html
+++ b/board.html
@@ -154,7 +154,7 @@
                             </button>
                         </div>
                         <div class="board-actions">
-                            <form action="search-bar" class="search-task">
+                            <div action="search-bar" class="search-task">
                                 <label for="search-bar">
                                     <input type="text" placeholder="Find Task" id="search-bar" />
                                     <div class="search-button-section">
@@ -167,7 +167,7 @@
                                         </div>
                                     </div>
                                 </label>
-                            </form>
+                            </div>
                             <button onclick="openAddTask()">
                                 <p>Add task</p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"
@@ -265,180 +265,3 @@
 </body>
 
 </html>
-
-<main>
-
-    <label class="task-info-type">Title</label>
-    <input type="text" placeholder="">
-
-    <label class="task-info-type">Description</label>
-    <input type="text" placeholder="">
-
-    <label class="task-info-type">Due date</label>
-    <input type="date" placeholder="">
-
-    <label class="task-info-type">Priority</label>
-    <div>
-        <button>
-            <p>Urgent</p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="15" viewBox="0 0 20 15" fill="none">
-                <path
-                    d="M18.9043 14.7549C18.6696 14.7553 18.4411 14.6804 18.2522 14.5414L10.0001 8.45818L1.74809 14.5414C1.63224 14.6269 1.50066 14.6888 1.36086 14.7236C1.22106 14.7583 1.07577 14.7652 0.933305 14.7439C0.790837 14.7225 0.653973 14.6733 0.530528 14.5991C0.407083 14.5249 0.299474 14.4271 0.213845 14.3114C0.128216 14.1956 0.0662437 14.0641 0.0314671 13.9244C-0.00330956 13.7847 -0.0102098 13.6396 0.0111604 13.4972C0.0543195 13.2097 0.21001 12.9511 0.443982 12.7783L9.34809 6.20779C9.53679 6.0682 9.76536 5.99286 10.0001 5.99286C10.2349 5.99286 10.4635 6.0682 10.6522 6.20779L19.5563 12.7783C19.7422 12.9152 19.8801 13.1073 19.9503 13.3272C20.0204 13.5471 20.0193 13.7835 19.9469 14.0026C19.8746 14.2218 19.7349 14.4126 19.5476 14.5477C19.3604 14.6828 19.1352 14.7553 18.9043 14.7549Z"
-                    fill="#FF3D00" />
-                <path
-                    d="M18.9043 9.00577C18.6696 9.00618 18.4411 8.93133 18.2522 8.79223L10.0002 2.70907L1.7481 8.79223C1.51412 8.96504 1.22104 9.0379 0.93331 8.99477C0.645583 8.95164 0.386785 8.79607 0.213849 8.56227C0.0409137 8.32847 -0.0319941 8.0356 0.011165 7.74808C0.054324 7.46057 0.210015 7.20196 0.443986 7.02916L9.3481 0.45868C9.5368 0.319089 9.76537 0.243744 10.0002 0.243744C10.2349 0.243744 10.4635 0.319089 10.6522 0.45868L19.5563 7.02916C19.7422 7.16607 19.8801 7.35819 19.9503 7.57806C20.0204 7.79794 20.0193 8.03435 19.947 8.25353C19.8746 8.47271 19.7349 8.66347 19.5476 8.79856C19.3604 8.93365 19.1352 9.00617 18.9043 9.00577Z"
-                    fill="#FF3D00" />
-            </svg>
-        </button>
-        <button>
-            <p>Medium</p>
-            <svg width="21" height="9" viewBox="0 0 21 9" fill="none">
-                <path
-                    d="M19.4041 8.22549H1.59589C1.30524 8.22549 1.0265 8.10919 0.820979 7.90218C0.61546 7.69517 0.5 7.4144 0.5 7.12164C0.5 6.82888 0.61546 6.54811 0.820979 6.3411C1.0265 6.13409 1.30524 6.01779 1.59589 6.01779H19.4041C19.6948 6.01779 19.9735 6.13409 20.179 6.3411C20.3845 6.54811 20.5 6.82888 20.5 7.12164C20.5 7.4144 20.3845 7.69517 20.179 7.90218C19.9735 8.10919 19.6948 8.22549 19.4041 8.22549Z"
-                    fill="#FFA800" />
-                <path
-                    d="M19.4041 2.9822H1.59589C1.30524 2.9822 1.0265 2.86591 0.820979 2.65889C0.61546 2.45188 0.5 2.17111 0.5 1.87835C0.5 1.5856 0.61546 1.30483 0.820979 1.09782C1.0265 0.890804 1.30524 0.774506 1.59589 0.774506L19.4041 0.774506C19.6948 0.774506 19.9735 0.890804 20.179 1.09782C20.3845 1.30483 20.5 1.5856 20.5 1.87835C20.5 2.17111 20.3845 2.45188 20.179 2.65889C19.9735 2.86591 19.6948 2.9822 19.4041 2.9822Z"
-                    fill="#FFA800" />
-            </svg>
-        </button>
-        <button>
-            <p>Low</p>
-            <svg width="20" height="15" viewBox="0 0 20 15" fill="none">
-                <path
-                    d="M10 9.00614C9.7654 9.00654 9.53687 8.9317 9.34802 8.79262L0.444913 2.22288C0.329075 2.13733 0.231235 2.02981 0.15698 1.90647C0.0827245 1.78313 0.033508 1.64638 0.0121402 1.50404C-0.031014 1.21655 0.0418855 0.923717 0.214802 0.689945C0.387718 0.456173 0.646486 0.300615 0.934181 0.257493C1.22188 0.21437 1.51493 0.287216 1.74888 0.460004L10 6.54248L18.2511 0.460004C18.367 0.374448 18.4985 0.312529 18.6383 0.277782C18.7781 0.243035 18.9234 0.236141 19.0658 0.257493C19.2083 0.278844 19.3451 0.328025 19.4685 0.402225C19.592 0.476425 19.6996 0.574193 19.7852 0.689945C19.8708 0.805697 19.9328 0.937168 19.9676 1.07685C20.0023 1.21653 20.0092 1.36169 19.9879 1.50404C19.9665 1.64638 19.9173 1.78313 19.843 1.90647C19.7688 2.02981 19.6709 2.13733 19.5551 2.22288L10.652 8.79262C10.4631 8.9317 10.2346 9.00654 10 9.00614Z"
-                    fill="#7AE229" />
-                <path
-                    d="M10 14.7547C9.7654 14.7551 9.53687 14.6802 9.34802 14.5412L0.444913 7.97142C0.210967 7.79863 0.0552944 7.54005 0.0121402 7.25257C-0.031014 6.96509 0.0418855 6.67225 0.214802 6.43848C0.387718 6.20471 0.646486 6.04915 0.934181 6.00603C1.22188 5.96291 1.51493 6.03575 1.74888 6.20854L10 12.291L18.2511 6.20854C18.4851 6.03575 18.7781 5.96291 19.0658 6.00603C19.3535 6.04915 19.6123 6.20471 19.7852 6.43848C19.9581 6.67225 20.031 6.96509 19.9879 7.25257C19.9447 7.54005 19.789 7.79863 19.5551 7.97142L10.652 14.5412C10.4631 14.6802 10.2346 14.7551 10 14.7547Z"
-                    fill="#7AE229" />
-            </svg>
-        </button>
-    </div>
-
-    <label class="task-info-type">Assigned to</label>
-    <form action="">
-        <input type="text">
-        <button>
-            <svg width="8" height="5" viewBox="0 0 8 5" fill="none">
-                <path
-                    d="M3.29998 4.3L0.699975 1.7C0.383309 1.38333 0.312475 1.02083 0.487475 0.6125C0.662475 0.204167 0.974975 0 1.42498 0H6.57498C7.02498 0 7.33747 0.204167 7.51248 0.6125C7.68748 1.02083 7.61664 1.38333 7.29997 1.7L4.69998 4.3C4.59998 4.4 4.49164 4.475 4.37498 4.525C4.25831 4.575 4.13331 4.6 3.99998 4.6C3.86664 4.6 3.74164 4.575 3.62498 4.525C3.50831 4.475 3.39998 4.4 3.29998 4.3Z"
-                    fill="#2A3647" />
-            </svg>
-        </button>
-        <div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-            <div>
-                <span>FY</span>
-                <span>Furkan Yigit</span>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647" stroke-width="2" />
-                    </svg>
-                </button>
-            </div>
-        </div>
-        <div>
-            <span>FY</span>
-            <span>FY</span>
-            <span>FY</span>
-            <span>FY</span>
-        </div>
-    </form>
-    <label class="task-info-type" for="">Subtasks</label>
-    <form action="">
-        <input type="text">
-        <div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path
-                    d="M7.00078 8.40005L2.10078 13.3C1.91745 13.4834 1.68411 13.575 1.40078 13.575C1.11745 13.575 0.884115 13.4834 0.700781 13.3C0.517448 13.1167 0.425781 12.8834 0.425781 12.6C0.425781 12.3167 0.517448 12.0834 0.700781 11.9L5.60078 7.00005L0.700781 2.10005C0.517448 1.91672 0.425781 1.68338 0.425781 1.40005C0.425781 1.11672 0.517448 0.883382 0.700781 0.700049C0.884115 0.516715 1.11745 0.425049 1.40078 0.425049C1.68411 0.425049 1.91745 0.516715 2.10078 0.700049L7.00078 5.60005L11.9008 0.700049C12.0841 0.516715 12.3174 0.425049 12.6008 0.425049C12.8841 0.425049 13.1174 0.516715 13.3008 0.700049C13.4841 0.883382 13.5758 1.11672 13.5758 1.40005C13.5758 1.68338 13.4841 1.91672 13.3008 2.10005L8.40078 7.00005L13.3008 11.9C13.4841 12.0834 13.5758 12.3167 13.5758 12.6C13.5758 12.8834 13.4841 13.1167 13.3008 13.3C13.1174 13.4834 12.8841 13.575 12.6008 13.575C12.3174 13.575 12.0841 13.4834 11.9008 13.3L7.00078 8.40005Z"
-                    fill="#2A3647" />
-            </svg>
-            <div></div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" viewBox="0 0 16 12" fill="none">
-                <path
-                    d="M5.55118 9.15L14.0262 0.675C14.2262 0.475 14.4637 0.375 14.7387 0.375C15.0137 0.375 15.2512 0.475 15.4512 0.675C15.6512 0.875 15.7512 1.1125 15.7512 1.3875C15.7512 1.6625 15.6512 1.9 15.4512 2.1L6.25118 11.3C6.05118 11.5 5.81785 11.6 5.55118 11.6C5.28452 11.6 5.05118 11.5 4.85118 11.3L0.551184 7C0.351184 6.8 0.25535 6.5625 0.263684 6.2875C0.272017 6.0125 0.376184 5.775 0.576184 5.575C0.776184 5.375 1.01368 5.275 1.28868 5.275C1.56368 5.275 1.80118 5.375 2.00118 5.575L5.55118 9.15Z"
-                    fill="#2A3647" />
-            </svg>
-        </div>
-    </form>
-    <div>
-        <div>
-            <span></span>
-            <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
-                    <path
-                        d="M2 17H3.4L12.025 8.375L10.625 6.975L2 15.6V17ZM16.3 6.925L12.05 2.725L13.45 1.325C13.8333 0.941667 14.3042 0.75 14.8625 0.75C15.4208 0.75 15.8917 0.941667 16.275 1.325L17.675 2.725C18.0583 3.10833 18.2583 3.57083 18.275 4.1125C18.2917 4.65417 18.1083 5.11667 17.725 5.5L16.3 6.925ZM14.85 8.4L4.25 19H0V14.75L10.6 4.15L14.85 8.4Z"
-                        fill="#2A3647" />
-                </svg>
-                <div></div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
-                    <path
-                        d="M3 18C2.45 18 1.97917 17.8042 1.5875 17.4125C1.19583 17.0208 1 16.55 1 16V3C0.716667 3 0.479167 2.90417 0.2875 2.7125C0.0958333 2.52083 0 2.28333 0 2C0 1.71667 0.0958333 1.47917 0.2875 1.2875C0.479167 1.09583 0.716667 1 1 1H5C5 0.716667 5.09583 0.479167 5.2875 0.2875C5.47917 0.0958333 5.71667 0 6 0H10C10.2833 0 10.5208 0.0958333 10.7125 0.2875C10.9042 0.479167 11 0.716667 11 1H15C15.2833 1 15.5208 1.09583 15.7125 1.2875C15.9042 1.47917 16 1.71667 16 2C16 2.28333 15.9042 2.52083 15.7125 2.7125C15.5208 2.90417 15.2833 3 15 3V16C15 16.55 14.8042 17.0208 14.4125 17.4125C14.0208 17.8042 13.55 18 13 18H3ZM3 3V16H13V3H3ZM5 13C5 13.2833 5.09583 13.5208 5.2875 13.7125C5.47917 13.9042 5.71667 14 6 14C6.28333 14 6.52083 13.9042 6.7125 13.7125C6.90417 13.5208 7 13.2833 7 13V6C7 5.71667 6.90417 5.47917 6.7125 5.2875C6.52083 5.09583 6.28333 5 6 5C5.71667 5 5.47917 5.09583 5.2875 5.2875C5.09583 5.47917 5 5.71667 5 6V13ZM9 13C9 13.2833 9.09583 13.5208 9.2875 13.7125C9.47917 13.9042 9.71667 14 10 14C10.2833 14 10.5208 13.9042 10.7125 13.7125C10.9042 13.5208 11 13.2833 11 13V6C11 5.71667 10.9042 5.47917 10.7125 5.2875C10.5208 5.09583 10.2833 5 10 5C9.71667 5 9.47917 5.09583 9.2875 5.2875C9.09583 5.47917 9 5.71667 9 6V13Z"
-                        fill="#2A3647" />
-                </svg>
-            </div>
-        </div>
-    </div>
-
-</main>
