contants renders in contact List (board) now

--- a/board.html
+++ b/board.html
@@ -12,6 +12,7 @@
     <script src="./script/template.js"></script>
     <script src="./script/add_task.js"></script>
     <script src="./script/add_task_template.js"></script>
+    <script src="./script/test_contacts.js"></script> <!-- Muss auf obj.js geändert werden -->
 </head>
 
 <body onload="init()">
