Add responsive styles for add task page
Introduced add_task_responsiv.css for improved responsiveness of the add task page. Updated add_task.html to include the new stylesheet and adjusted the layout and styles in add_task.css for better alignment and usability. Minor JavaScript update to set default button state.

--- a/add_task.html
+++ b/add_task.html
@@ -9,12 +9,13 @@
 
   <link rel="stylesheet" href="./style/add_task.css" />
   <link rel="stylesheet" href="./style/style.css" />
+  <link rel="stylesheet" href="./style/add_task_responsiv.css" />
   <script src="./script/add_task.js"></script>
   <script src="./script/add_task_template.js"></script>
   <script src="./script/add_task_firebase.js"></script>
 </head>
 
-<body onclick="closeContactlist(), closeCategoryList()" onload="init(), loadData() ">
+<body  onclick="closeContactlist(), closeCategoryList()" onload="init(), loadData() ">
   <div class="layout">
     <nav class="navbar">
       <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
@@ -408,18 +409,20 @@
                   </div>
                 </div>
               </div>
-            </div>
+              <div class="subtask_list">
+ 
           </div>
-
-          <div class="subtask_list">
-
-          </div>
-
-          <div class="submit_container">
-            <div class="required_info">
+          <div class="required_info">
               <span style="color: red">*</span>
               <p>This field is required</p>
             </div>
+            </div>
+          </div>
+
+          
+
+          <div class="submit_container">
+           
 
             <div class="submit_butn_wrapper">
               <button class="clear_btn" onclick="location.reload()">
