BUG: Profile Menu doesn't show if click on profile button on the header.

--- a/summary.html
+++ b/summary.html
@@ -125,6 +125,18 @@
                 fill="#A8A8A8" />
             </svg>
             <div class="profil-header"></div>
+            <!-- //BUG: Profile Menu doesn't show -->
+                <div class="nav-profile-container" id="profile-menu">
+      <div class="nav-profile-link-container">
+        <ul class="nav-profile-links">
+          <li class="nav-profile-link-item"><a href="">Help</a></li>
+          <li class="nav-profile-link-item"><a href="">Legal Notice</a></li>
+          <li class="nav-profile-link-item"><a href="">Privacy Policy</a></li>
+          <li class="nav-profile-link-item"><a href="">Log out</a></li>
+        </ul>
+      </div>
+    </div>
+
           </div>
         </div>
       </header>
