--- a/board.html
+++ b/board.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="./style/style.css" />
 
+    <script src="./script/script.js"></script>
     <script src="./script/obj.js"></script>
     <script src="./script/template.js"></script>
     <script src="./script/add_task.js"></script>
