--- a/summary.html
+++ b/summary.html
@@ -167,7 +167,7 @@
           <div class="summary-board-panels">
             <div class="summary-board-panel s-panel-gap">
               <div class="icon-wrap">
-                <svg class="icon-edit" width="32" height="32" viewBox="0 0 25 25" fill="none"
+                <svg class="icon-edit" viewBox="0 0 25 25" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="M3.16667 22.3332H5.03333L16.5333 10.8332L14.6667 
                           8.9665L3.16667 20.4665V22.3332ZM22.2333 8.89984L16.5667 
@@ -189,7 +189,7 @@
 
             <div class="summary-board-panel s-panel-gap">
               <div class="icon-wrap-2">
-                <svg class="icon-arrow" width="38" height="30" viewBox="0 0 38 30" xmlns="http://www.w3.org/2000/svg">
+                <svg class="icon-arrow" viewBox="0 0 38 30" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.02832 15.0001L15.2571 26.0662L33.9717 3.93408" stroke="white" stroke-width="7"
                     stroke-linecap="round" stroke-linejoin="round" fill="none" />
                 </svg>
