--- a/contacts.html
+++ b/contacts.html
@@ -9,9 +9,9 @@
     <title>Contacts</title>
 </head>
 
-<body class="contacts-body" onload="filterContacts()">
+<body class="contacts-body" onload="loadContacts()">
     <section class="layout">
-        <section id="overlay_contacts" class="overlay d_none" onclick="closeResponsiveContactEditMenu()">
+        <section id="overlay_contacts" class="overlay-contacts d_none" onclick="closeResponsiveContactEditMenu()">
             <div id="overlay_contacts_content" class="overlay-shadow-pos-rel-container">
 
             </div>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="contact_area" class="contact">
+                <section id="contact_area" class="contacts-contact-section">
                     <div class="contact-rightside-big-container">
                         <div class="contact-big-header-container">
                             <div class="contacts-header">
