added animated overlay to summary.html

--- a/summary.html
+++ b/summary.html
@@ -154,6 +154,13 @@
         </div>
       </header>
 
+      <section class="animated-overlay" id="animated_overlay_id">
+          <div class="overlay-text" id="overlay_text_id">
+            <p> Good evening,</p>
+            <p> Sofia Müller</p>
+          </div> 
+      </section>
+
       <section class="summary-title">
         <div class="summary-title-text" id="summary-title-360">
           Join 360
