--- a/board.html
+++ b/board.html
@@ -19,6 +19,11 @@
 <body onload="init()">
 
     <div class="layout">
+        <section id="overlay_board" class="overlay-board d_none" onclick="closeOverlayBoard()">
+            <div id="overlay_board_content" class="overlay-shadow-pos-rel-container">
+
+            </div>
+        </section>
         <nav class="navbar">
             <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
                 <path d="M72.6549 0H50.4971V25.4923H72.6549V0Z" fill="white" />
