--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <title>Contacts</title>
 </head>
 
-<body class="contacts-body" onload="loadContacts()">
+<body class="contacts-body" onload="init()">
     <section class="layout">
         <section id="overlay_contacts" class="overlay-contacts d_none" onclick="closeResponsiveContactEditMenu()">
             <div id="overlay_contacts_content" class="overlay-shadow-pos-rel-container">
