--- a/board.html
+++ b/board.html
@@ -109,7 +109,7 @@
             </ul>
         </nav>
         <main>
-            <header class="main-header">
+            <header class="main-header resp-header">
                 <div class="content-limit-header">
                     <svg width="32" height="40" viewBox="0 0 32 40" fill="none">
                         <path d="M22.927 0.492188H15.8389V8.64696H22.927V0.492188Z" fill="#2A3647" />
