--- a/add_task.html
+++ b/add_task.html
@@ -304,7 +304,7 @@
 
 
             <div class="submit_butn_wrapper">
-              <button class="clear_btn" onclick="clearForm()">
+              <button class="clear_btn" onclick="clearFormAddTask('add_task_form')">
                 Clear
                 <!-- iconoir_cancel.svg -->
                 <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -313,7 +313,7 @@
                     stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </button>
-              <button type="button" class="creat_task_btn" onclick="checkNPost()">
+              <button type="button" class="creat_task_btn" onclick="checkNPost('add_task_form')">
                 <!--closeProtection(event),   entfernt-->
                 Create Task
                 <!-- check.svg -->
