--- a/summary.html
+++ b/summary.html
@@ -168,6 +168,7 @@
       <section class="summary-container">
         <section class="summary-board-container">
           <div class="summary-board-panels">
+            <a href="./board.html">
             <div class="summary-board-panel s-panel-gap">
               <div class="icon-wrap">
                 <svg class="icon-edit" viewBox="0 0 25 25" fill="none"
@@ -189,7 +190,9 @@
                 <div class="s-txt-20-400">ToDo</div>
               </div>
             </div>
+          </a>
 
+          <a href="./board.html">
             <div class="summary-board-panel s-panel-gap">
               <div class="icon-wrap-2">
                 <svg class="icon-arrow" viewBox="0 0 38 30" xmlns="http://www.w3.org/2000/svg">
@@ -203,10 +206,12 @@
                 <div class="s-txt-20-400">Done</div>
               </div>
             </div>
+          </a>
           </div>
+        
 
           <div class="summary-board-panels">
-
+            <a href="./board.html">
             <div class="summary-board-panel s-panel-gap">
               <div class="summary-board-urgent">
                 <img src="./assets/svg/prio.svg" class="s-img" alt="" />
@@ -223,23 +228,28 @@
                 <div class="s-txt-16-400">upcoming Deadline</div>
               </div>
             </div>
+          </a>
           </div>
 
           <div class="summary-board-panels">
+            <a href="./board.html">
             <div class="summary-board-panel tasks-In-Board">
               <div class="s-txt-64-600">5</div>
               <div class="s-txt-20-400">Tasks in<br />Board</div>
             </div>
-
+            </a>
+            <a href="./board.html">
             <div class="summary-board-panel tasks-In-Progress">
               <div class="s-txt-64-600">2</div>
               <div class="s-txt-20-400">Tasks in<br />Progress</div>
             </div>
-
+            </a>
+            <a href="./board.html">
             <div class="summary-board-panel awaiting-In-Feedback">
               <div class="s-txt-64-600">2</div>
               <div class="s-txt-20-400">Awaiting<br />Feedback</div>
             </div>
+            </a>
           </div>
         </section>
 
