--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -140,7 +140,8 @@
 
                                 </label>
                                 <div class="add-tast-form-input-required-container">
-                                    <input id="add_task_title" type="text" class="w-100 add-task-form-left-title-input" placeholder="Enter a Title">
+                                    <input id="add_task_title" type="text" class="w-100 add-task-form-left-title-input"
+                                        placeholder="Enter a Title">
                                     <div class="h-16">
                                         <p class="add-tast-form-required-msg">This field is required</p>
                                     </div>
@@ -159,20 +160,41 @@
                                 </div>
                             </div>
                             <div class="h-96">
-                                <label for="add_task_due_date">
-                                    <p>Due date</p>
-                                    <p class="add-task-form-required">*</p>
+                                <label for="add_task_due_date" class="add-task-due-date-label">
+                                    <div class="add-task-required-label-head">
+                                        <p>Due date</p>
+                                        <p class="add-task-form-required">*</p>
+                                    </div>
+                                    <div class="add-tast-form-input-required-container">
+                                        <input id="add_task_due_date" class="w-100 add-task-form-default-inputs"
+                                            type="date">
+                                        <div class="h-16">
+                                            <p class="add-tast-form-required-msg">This field is required</p>
+                                        </div>
+                                    </div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none">
+                                        <mask id="mask0_387837_2602" style="mask-type:alpha" maskUnits="userSpaceOnUse"
+                                            x="0" y="0" width="24" height="24">
+                                            <rect width="24" height="24" fill="#D9D9D9" />
+                                        </mask>
+                                        <g mask="url(#mask0_387837_2602)">
+                                            <path
+                                                d="M14.5 18C13.8 18 13.2083 17.7583 12.725 17.275C12.2417 16.7917 12 16.2 12 15.5C12 14.8 12.2417 14.2083 12.725 13.725C13.2083 13.2417 13.8 13 14.5 13C15.2 13 15.7917 13.2417 16.275 13.725C16.7583 14.2083 17 14.8 17 15.5C17 16.2 16.7583 16.7917 16.275 17.275C15.7917 17.7583 15.2 18 14.5 18ZM5 22C4.45 22 3.97917 21.8042 3.5875 21.4125C3.19583 21.0208 3 20.55 3 20V6C3 5.45 3.19583 4.97917 3.5875 4.5875C3.97917 4.19583 4.45 4 5 4H6V3C6 2.71667 6.09583 2.47917 6.2875 2.2875C6.47917 2.09583 6.71667 2 7 2C7.28333 2 7.52083 2.09583 7.7125 2.2875C7.90417 2.47917 8 2.71667 8 3V4H16V3C16 2.71667 16.0958 2.47917 16.2875 2.2875C16.4792 2.09583 16.7167 2 17 2C17.2833 2 17.5208 2.09583 17.7125 2.2875C17.9042 2.47917 18 2.71667 18 3V4H19C19.55 4 20.0208 4.19583 20.4125 4.5875C20.8042 4.97917 21 5.45 21 6V20C21 20.55 20.8042 21.0208 20.4125 21.4125C20.0208 21.8042 19.55 22 19 22H5ZM5 20H19V10H5V20ZM5 8H19V6H5V8Z"
+                                                fill="#2A3647" />
+                                        </g>
+                                    </svg>
                                 </label>
-                                <div class="add-tast-form-input-required-container">
-                                    <input id="add_task_due_date" class="w-100 add-task-form-default-inputs" type="date">
+                                <!-- <div class="add-tast-form-input-required-container">
+                                    <input id="add_task_due_date" class="w-100 add-task-form-default-inputs"
+                                        type="date">
                                     <div class="h-16">
                                         <p class="add-tast-form-required-msg">This field is required</p>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </section>
                         <div class="add-task-form-seperator">
-
                         </div>
                         <section class="add-task-form-right">
                             <div class="add-task-priority-btns-container">
@@ -232,17 +254,46 @@
 
                             </div>
                             <div class="h-80">
-                                <label for="add_task_assigned_to">
+                                <label for="add_task_assigned_to" class="add-task-assigned-to-category-label">
                                     <p>Assigned to</p>
+                                    <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs"
+                                        type="text">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none">
+                                        <mask id="mask0_387837_1520" style="mask-type:alpha" maskUnits="userSpaceOnUse"
+                                            x="0" y="0" width="24" height="24">
+                                            <rect width="24" height="24" fill="#D9D9D9" />
+                                        </mask>
+                                        <g mask="url(#mask0_387837_1520)">
+                                            <path
+                                                d="M11.3 14.3L8.69998 11.7C8.38331 11.3833 8.31248 11.0208 8.48748 10.6125C8.66248 10.2042 8.97498 10 9.42498 10H14.575C15.025 10 15.3375 10.2042 15.5125 10.6125C15.6875 11.0208 15.6166 11.3833 15.3 11.7L12.7 14.3C12.6 14.4 12.4916 14.475 12.375 14.525C12.2583 14.575 12.1333 14.6 12 14.6C11.8666 14.6 11.7416 14.575 11.625 14.525C11.5083 14.475 11.4 14.4 11.3 14.3Z"
+                                                fill="#2A3647" />
+                                        </g>
+                                    </svg>
                                 </label>
-                                <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs" type="text">
+                                <!-- <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs" type="text"> -->
                             </div>
                             <div class="h-80">
-                                <label for="add_task_category">
-                                    <p>Category</p>
-                                    <p class="add-task-form-required">*</p>
+                                <label for="add_task_category" class="add-task-assigned-to-category-label">
+                                    <div class="add-task-required-label-head">
+                                        <p>Category</p>
+                                        <p class="add-task-form-required">*</p>
+                                    </div>
+                                    <input id="add_task_category" class="w-100 add-task-form-default-inputs" type="text">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none">
+                                        <mask id="mask0_387837_1520" style="mask-type:alpha" maskUnits="userSpaceOnUse"
+                                            x="0" y="0" width="24" height="24">
+                                            <rect width="24" height="24" fill="#D9D9D9" />
+                                        </mask>
+                                        <g mask="url(#mask0_387837_1520)">
+                                            <path
+                                                d="M11.3 14.3L8.69998 11.7C8.38331 11.3833 8.31248 11.0208 8.48748 10.6125C8.66248 10.2042 8.97498 10 9.42498 10H14.575C15.025 10 15.3375 10.2042 15.5125 10.6125C15.6875 11.0208 15.6166 11.3833 15.3 11.7L12.7 14.3C12.6 14.4 12.4916 14.475 12.375 14.525C12.2583 14.575 12.1333 14.6 12 14.6C11.8666 14.6 11.7416 14.575 11.625 14.525C11.5083 14.475 11.4 14.4 11.3 14.3Z"
+                                                fill="#2A3647" />
+                                        </g>
+                                    </svg>
                                 </label>
-                                <input id="add_task_category" class="w-100 add-task-form-default-inputs" type="text">
+                                <!-- <input id="add_task_category" class="w-100 add-task-form-default-inputs" type="text"> -->
                             </div>
                             <div class="h-80">
                                 <label for="add_task_subtasks">
@@ -250,7 +301,7 @@
                                 </label>
                                 <input id="add_task_subtasks" class="w-100 add-task-form-default-inputs" type="text">
                             </div>
-                        
+
                         </section>
                     </div>
                     <section class="add-task-footer-and-btns">
@@ -290,11 +341,7 @@
             </div>
         </main>
 
-
-
-
     </div>
-
 </body>
 
 </html>
