--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -100,7 +100,7 @@
                 </li>
             </ul>
         </nav>
-        <main class="add-task-main">
+        <main >
             <header class="main-header">
                 <div class="content-limit-header">
                     <svg width="32" height="40" viewBox="0 0 32 40" fill="none">
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </header>
-            <div class="add-task-content-container">
+            <div class="add-task-content-container add-task-main">
                 <h2>Add Task</h2>
                 <form class="add-task-form" action="" onsubmit="return false;">
                     <div class="add-task-form-main">
@@ -185,13 +185,6 @@
                                         </g>
                                     </svg>
                                 </label>
-                                <!-- <div class="add-tast-form-input-required-container">
-                                    <input id="add_task_due_date" class="w-100 add-task-form-default-inputs"
-                                        type="date">
-                                    <div class="h-16">
-                                        <p class="add-tast-form-required-msg">This field is required</p>
-                                    </div>
-                                </div> -->
                             </div>
                         </section>
                         <div class="add-task-form-seperator">
@@ -200,9 +193,9 @@
                             <div class="add-task-priority-btns-container">
                                 <p>Priority</p>
                                 <div class="add-task-priority-btns">
-                                    <button>
+                                    <button id="add_task_priority_urgent" class="add-task-priority-btns-hover-class" onclick="activatePriority('urgent')">
                                         <p>Urgent</p>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="15"
+                                        <svg id="add_task_priority_urgent_svg" xmlns="http://www.w3.org/2000/svg" width="20" height="15"
                                             viewBox="0 0 20 15" fill="none">
                                             <g clip-path="url(#clip0_387837_1593)">
                                                 <path
@@ -219,9 +212,9 @@
                                             </defs>
                                         </svg>
                                     </button>
-                                    <button>
+                                    <button id="add_task_priority_medium" class="add-task-priority-btn-medium-active" onclick="activatePriority('medium')">
                                         <p>Medium</p>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="8" viewBox="0 0 20 8"
+                                        <svg id="add_task_priority_medium_svg" xmlns="http://www.w3.org/2000/svg" width="20" height="8" viewBox="0 0 20 8"
                                             fill="none">
                                             <g clip-path="url(#clip0_156_1104)">
                                                 <path
@@ -238,9 +231,9 @@
                                             </defs>
                                         </svg>
                                     </button>
-                                    <button>
+                                    <button id="add_task_priority_low" class="add-task-priority-btns-hover-class" onclick="activatePriority('low')">
                                         <p>Low</p>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="15"
+                                        <svg id="add_task_priority_low_svg" xmlns="http://www.w3.org/2000/svg" width="20" height="15"
                                             viewBox="0 0 20 15" fill="none">
                                             <path
                                                 d="M10 8.76077C9.7654 8.76118 9.53687 8.68634 9.34802 8.54726L0.444913 1.97752C0.329075 1.89197 0.231235 1.78445 0.15698 1.66111C0.0827245 1.53777 0.033508 1.40102 0.0121402 1.25868C-0.031014 0.971193 0.0418855 0.678356 0.214802 0.444584C0.387718 0.210811 0.646486 0.0552534 0.934181 0.0121312C1.22188 -0.0309911 1.51493 0.0418545 1.74888 0.214643L10 6.29712L18.2511 0.214643C18.367 0.129087 18.4985 0.0671675 18.6383 0.0324205C18.7781 -0.00232646 18.9234 -0.00922079 19.0658 0.0121312C19.2083 0.0334832 19.3451 0.0826633 19.4685 0.156864C19.592 0.231064 19.6996 0.328831 19.7852 0.444584C19.8708 0.560336 19.9328 0.691806 19.9676 0.831488C20.0023 0.97117 20.0092 1.11633 19.9879 1.25868C19.9665 1.40102 19.9173 1.53777 19.843 1.66111C19.7688 1.78445 19.6709 1.89197 19.5551 1.97752L10.652 8.54726C10.4631 8.68634 10.2346 8.76118 10 8.76077Z"
@@ -271,7 +264,6 @@
                                         </g>
                                     </svg>
                                 </label>
-                                <!-- <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs" type="text"> -->
                             </div>
                             <div class="h-80">
                                 <label for="add_task_category" class="add-task-assigned-to-category-label">
@@ -293,7 +285,6 @@
                                         </g>
                                     </svg>
                                 </label>
-                                <!-- <input id="add_task_category" class="w-100 add-task-form-default-inputs" type="text"> -->
                             </div>
                             <div class="h-80">
                                 <label for="add_task_subtasks">
@@ -342,6 +333,7 @@
         </main>
 
     </div>
+    <script src="./script/add_task_v2.js"></script>
 </body>
 
 </html>
