--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -269,6 +269,39 @@
                                         </g>
                                     </svg>
                                 </label>
+                                <div class="add-task-form-assigned-to-dropdown">
+                                    <ul id="add_task_form_assigned_to_dropdown_contacts"
+                                        class="add-task-form-assigned-to-dropdown-contacts">
+                                        <li id="test_contact"
+                                            class="add-task-form-assigned-to-dropdown-contacts-default-hover-class"
+                                            onclick="selectContact('test_contact')">
+                                            <div class="add-task-form-assigned-to-dropdown-list-contact">
+                                                <div class="add-task-form-assigned-to-dropdown-contacts-icon">
+                                                    <p>AM</p>
+                                                </div>
+                                                <p>Anton Mayer</p>
+                                            </div>
+                                            <svg id="test_contact_unchecked" class="d_none"
+                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                viewBox="0 0 24 24" fill="none">
+                                                <rect x="4" y="4" width="16" height="16" rx="3" stroke="#2A3647"
+                                                    stroke-width="2" />
+                                            </svg>
+                                            <div  class="">
+                                                <svg id="test_contact_checked" class="d_none" xmlns="http://www.w3.org/2000/svg"
+                                                width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                                <path
+                                                    d="M20 11V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7C4 5.34315 5.34315 4 7 4H15"
+                                                    stroke="white" stroke-width="2" stroke-linecap="round" />
+                                                <path d="M8 12L12 16L20 4.5" stroke="white" stroke-width="2"
+                                                    stroke-linecap="round" stroke-linejoin="round" />
+                                            </svg>
+                                            </div>
+                                            
+
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="h-80">
                                 <label for="add_task_category" class="add-task-assigned-to-category-label">
@@ -317,7 +350,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                             </button>
-                            <button class="add-task-form-create-btn">
+                            <button class="add-task-form-create-btn" disabled>
                                 <p>Create Task</p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
