added function for burger menu and added script.js

--- a/summary.html
+++ b/summary.html
@@ -136,10 +136,10 @@
                 fill="#A8A8A8" />
             </svg>
 
-            <div class="profil-header"></div>
+            <div class="profil-header" onclick="toggleBurgerMenu()"></div>
             <!-- //BUG: Profile Menu doesn't show -->
 
-            <div class="nav-profile-container" id="profile-menu">
+            <div class="nav-profile-container" id="profile-menu" >
               <div class="nav-profile-link-container">
                 <ul class="nav-profile-links">
                   <li class="nav-profile-link-item"><a href="">Help</a></li>
@@ -262,6 +262,7 @@
   </section>
   <script src="./script/template.js"></script>
   <script src="./script/summary.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
