--- a/summary.html
+++ b/summary.html
@@ -100,7 +100,7 @@
 
       <ul class="navbar-footer">
         <li>
-          <a class="navbar-footer-link" href="./privacy_police.html">Private Policy</a>
+          <a class="navbar-footer-link" href="./privacy_policy.html">Private Policy</a>
         </li>
         <li>
           <a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a>
